tests/snapshots/integration__integration_tests__init__init_fish_prompt_hook.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - fish
    - "--hook"
    - prompt
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
# worktrunk shell integration for fish

# Helper function to parse wt output and handle directives
function _wt_exec
    set -l output (wt $argv 2>&1)
    set -l exit_code $status

    # Parse output line by line
    for line in $output
        if string match -q '__WORKTRUNK_CD__*' -- $line
            # Extract path and change directory
            cd (string sub -s 18 -- $line)
        else
            # Regular output - print it
            echo $line
        end
    end

    return $exit_code
end

# Main commands that support directory changes
function wt-switch
    _wt_exec switch --internal $argv
end

function wt-finish
    _wt_exec finish --internal $argv
end

# Convenience aliases
alias wt-sw='wt-switch'
alias wt-fin='wt-finish'


# Prompt hook for tracking current worktree
function _wt_prompt_hook --on-event fish_prompt
    # Call wt to update tracking
    command wt hook prompt 2>/dev/null; or true
end


----- stderr -----
